--- a/TestReporter.SpecFlow.Tool.csproj
+++ b/TestReporter.SpecFlow.Tool.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <Version>1.0.3</Version>
+        <Version>1.0.4</Version>
         <OutputType>Exe</OutputType>
         <PackAsTool>true</PackAsTool>
         <IsPackable>true</IsPackable>
@@ -22,6 +22,14 @@
         <PackageReference Include="RazorEngine.NetCore" Version="3.1.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="3.7.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.7.0" />
+    </ItemGroup>
+    
+    <ItemGroup>
+        <Content Include="Report\Template.cshtml">
+            <Pack>true</Pack>
+            <PackagePath>Report\</PackagePath>
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
 </Project>
