--- a/TestReporter.SpecFlow.Tool.csproj
+++ b/TestReporter.SpecFlow.Tool.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-        <Version>2.3.0</Version>
+        <Version>2.3.1</Version>
         <OutputType>Exe</OutputType>
         <PackAsTool>true</PackAsTool>
         <IsPackable>true</IsPackable>
@@ -18,6 +18,7 @@
         <ToolCommandName>specflow-report</ToolCommandName>
         <AssemblyName>dotnet-specflow-report</AssemblyName>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <RepositoryUrl>https://github.com/alexmalimon/TestReporter.SpecFlow.Tool</RepositoryUrl>
         <PackageProjectUrl>https://github.com/alexmalimon/TestReporter.SpecFlow.Tool</PackageProjectUrl>
