--- a/TestReporter.SpecFlow.Tool.csproj
+++ b/TestReporter.SpecFlow.Tool.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     </PropertyGroup>
 
@@ -19,6 +20,7 @@
         <AssemblyName>dotnet-specflow-report</AssemblyName>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <RepositoryUrl>https://github.com/alexmalimon/TestReporter.SpecFlow.Tool</RepositoryUrl>
         <PackageProjectUrl>https://github.com/alexmalimon/TestReporter.SpecFlow.Tool</PackageProjectUrl>
@@ -32,14 +34,15 @@
         <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
         <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="3.7.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.7.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="2.2.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="3.7.0" />
     </ItemGroup>
 
     <ItemGroup>
         <Content Include="Report\Template.cshtml">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
             <Pack Condition=" '$(Configuration)' == 'Release' ">true</Pack>
             <PackagePath Condition=" '$(Configuration)' == 'Release' ">Report\</PackagePath>
-            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
     </ItemGroup>
 
